--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@types/js-yaml": "^4.0.9",
+    "axios": "^1.13.2",
+    "js-yaml": "^4.1.1",
     "next": "16.0.10",
     "react": "19.2.1",
     "react-dom": "19.2.1"
